# openresponses-python

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml  update-spec.yml
scripts/: generate_types.py
src/openresponses_types/: __init__.py  helpers.py  types.py
tests/: test_helpers.py  test_types.py
