[project]
name = "openresponses-types"
version = "2.3.0"
description = "Python SDK for OpenResponses specification"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
authors = [{ name = "mozilla.ai" }]
keywords = ["openresponses", "llm", "ai", "pydantic", "openapi"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = [
    "pydantic>=2.0,<3.0",
]

[project.urls]
Homepage = "https://github.com/mozilla-ai/openresponses-python"
Documentation = "https://github.com/mozilla-ai/openresponses-python#readme"
Repository = "https://github.com/mozilla-ai/openresponses-python"
Issues = "https://github.com/mozilla-ai/openresponses-python/issues"

[dependency-groups]
dev = [
    "datamodel-code-generator[http]>=0.26.0",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
    "mypy>=1.13",
    "pre-commit>=4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/openresponses_types"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.lint.per-file-ignores]
"src/openresponses_types/types.py" = ["E501", "N815", "UP"]
"tests/**" = ["D"]

[tool.mypy]
python_version = "3.11"
strict = true
exclude = ["scripts/"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_decorators = false

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.datamodel-codegen]
input = "src/openresponses_types/_spec_cache/openapi.json"
input-file-type = "openapi"
output = "src/openresponses_types/types.py"
output-model-type = "pydantic_v2.BaseModel"
use-annotated = true
field-constraints = true
target-python-version = "3.11"
use-double-quotes = true
collapse-root-models = true
